--- a/centos/installations/nginx/php.conf
+++ b/centos/installations/nginx/php.conf
@@ -1,6 +1,7 @@
 upstream php {
 #    server 127.0.0.1:9054;
-    server 127.0.0.1:9056;
+#    server 127.0.0.1:9056;
 #    server 127.0.0.1:9070;
 #    server 127.0.0.1:9072;
+    server 127.0.0.1:9073;
 }
