Soporte de de guiones en Virtual Host
Soporte de guiones (-_) en nombre de sub-dominio

--- a/centos/installations/nginx/vhost.conf
+++ b/centos/installations/nginx/vhost.conf
@@ -2,7 +2,7 @@ server {
 	index index.html index.php index.htm;
 	set $basepath "/var/www";
 	# check one name domain for simple application
-	server_name ~^(?<subdomain>\w*)\.(?<domain>.+)$;
+	server_name ~^(?<subdomain>[\w-_]*)\.(?<domain>.+)$;
     set $rootpath "${domain}/${subdomain}/public";
     set $servername "${subdomain}.${domain}";
 	access_log "/var/log/nginx/vhost.access.log";
