--- a/.gitignore
+++ b/.gitignore
@@ -28,14 +28,12 @@
 *.msm
 *.msp
 
-### Dreamweaver template
-# DW Dreamweaver added files
-_notes
-_compareTemp
-configs/
-dwsync.xml
-dw_php_codehinting.config
-*.mno
+# Hiden files
+.*
+.*/
+
+# Not me
+!.gitignore
 
 ### Windows template
 # Windows image file caches
@@ -53,108 +51,3 @@ $RECYCLE.BIN/
 
 ### Mac
 .DS_Store
-
-### Composer
-.git
-CVS
-.svn
-.hg
-.lock-wscript
-.wafpickle-N
-.*.swp
-._*
-npm-debug.log
-.npmrc
-node_modules
-config.gypi
-*.orig
-package-lock.json
-
-### Laravel template
-vendor/
-node_modules/
-bower_components/
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-bootstrap/cache/
-.env.*.php
-.env.php
-.env
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
-
-### Dropbox template
-# Dropbox settings and caches
-.dropbox
-.dropbox.attr
-.dropbox.cache
-
-### Example user template
-
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
-
-### Sass template
-.sass-cache/
-
-### VisualStudioCode template
-.vscode
-
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
-
-## File-based project format:
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Alograg Dice
-
-testing
-Scripts/bat/extractor
