--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
   email = alograg@gmail.com
 [core]
   excludesfile = ~/.config/.gitignore_global
-  editor = nvim
+  editor = vi
   filemode = false
   preloadindex = true
   fscache = true
